// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Label nextPageLabel snapshot 1`] = `
<div
  className="material-ui-flat-pagination"
>
  <FlatButton
    disableTouchRipple={false}
    disabled={true}
    fullWidth={false}
    key="previous"
    label="<"
    labelPosition="after"
    labelStyle={
      Object {
        "padding": "0 12px",
      }
    }
    onClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={true}
    secondary={false}
    style={
      Object {
        "minWidth": "none",
      }
    }
  >
    <EnhancedButton
      containerElement="button"
      disableTouchRipple={false}
      disabled={true}
      focusRippleColor="#999999"
      focusRippleOpacity={0.3}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "borderRadius": 2,
          "color": "rgba(0, 0, 0, 0.3)",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "minWidth": "none",
          "overflow": "hidden",
          "padding": 0,
          "textAlign": "center",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
      tabIndex={0}
      touchRippleColor="#999999"
      touchRippleOpacity={0.3}
      type="button"
    >
      <button
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.3)",
            "cursor": "default",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": 0,
            "minWidth": "none",
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={-1}
        type="button"
      >
        <FlatButtonLabel
          key="labelElement"
          label="<"
          style={
            Object {
              "fontSize": 14,
              "fontWeight": 500,
              "letterSpacing": 0,
              "padding": "0 12px",
              "textTransform": "uppercase",
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "muiPrepared": true,
                "padding": "0 12px",
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "verticalAlign": "middle",
              }
            }
          >
            &lt;
          </span>
        </FlatButtonLabel>
      </button>
    </EnhancedButton>
  </FlatButton>
  <FlatButton
    disableTouchRipple={true}
    disabled={false}
    fullWidth={false}
    key="1"
    label="1"
    labelPosition="after"
    labelStyle={
      Object {
        "padding": "0 12px",
      }
    }
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={false}
    secondary={true}
    style={
      Object {
        "minWidth": "none",
      }
    }
  >
    <EnhancedButton
      containerElement="button"
      disableTouchRipple={true}
      disabled={false}
      focusRippleColor="#999999"
      focusRippleOpacity={0.3}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "borderRadius": 2,
          "color": "#ff4081",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "minWidth": "none",
          "overflow": "hidden",
          "padding": 0,
          "textAlign": "center",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
      tabIndex={0}
      touchRippleColor="#999999"
      touchRippleOpacity={0.3}
      type="button"
    >
      <button
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "#ff4081",
            "cursor": "pointer",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": 0,
            "minWidth": "none",
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={0}
        type="button"
      >
        <FlatButtonLabel
          key="labelElement"
          label="1"
          style={
            Object {
              "fontSize": 14,
              "fontWeight": 500,
              "letterSpacing": 0,
              "padding": "0 12px",
              "textTransform": "uppercase",
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "muiPrepared": true,
                "padding": "0 12px",
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "verticalAlign": "middle",
              }
            }
          >
            1
          </span>
        </FlatButtonLabel>
      </button>
    </EnhancedButton>
  </FlatButton>
  <FlatButton
    disableTouchRipple={false}
    disabled={true}
    fullWidth={false}
    icon={
      <NavigationArrowForward
        style={
          Object {
            "padding": "0 12px",
          }
        }
      />
    }
    key="next"
    labelPosition="after"
    labelStyle={
      Object {
        "padding": "0 12px",
      }
    }
    onClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={true}
    secondary={false}
    style={
      Object {
        "minWidth": "none",
      }
    }
  >
    <EnhancedButton
      containerElement="button"
      disableTouchRipple={false}
      disabled={true}
      focusRippleColor="#999999"
      focusRippleOpacity={0.3}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "borderRadius": 2,
          "color": "rgba(0, 0, 0, 0.3)",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "minWidth": "none",
          "overflow": "hidden",
          "padding": 0,
          "textAlign": "center",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
      tabIndex={0}
      touchRippleColor="#999999"
      touchRippleOpacity={0.3}
      type="button"
    >
      <button
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.3)",
            "cursor": "default",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": 0,
            "minWidth": "none",
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={-1}
        type="button"
      >
        <NavigationArrowForward
          color="rgba(0, 0, 0, 0.3)"
          key="iconCloned"
          style={
            Object {
              "marginLeft": 0,
              "marginRight": 0,
              "padding": "0 12px",
              "verticalAlign": "middle",
            }
          }
        >
          <SvgIcon
            color="rgba(0, 0, 0, 0.3)"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "marginLeft": 0,
                "marginRight": 0,
                "padding": "0 12px",
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 24 24"
          >
            <svg
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "display": "inline-block",
                  "fill": "rgba(0, 0, 0, 0.3)",
                  "height": 24,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "muiPrepared": true,
                  "padding": "0 12px",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "userSelect": "none",
                  "verticalAlign": "middle",
                  "width": 24,
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </SvgIcon>
        </NavigationArrowForward>
      </button>
    </EnhancedButton>
  </FlatButton>
</div>
`;

exports[`Pagination Label previousPageLabel snapshot 1`] = `
<div
  className="material-ui-flat-pagination"
>
  <FlatButton
    disableTouchRipple={false}
    disabled={true}
    fullWidth={false}
    icon={
      <NavigationArrowBack
        style={
          Object {
            "padding": "0 12px",
          }
        }
      />
    }
    key="previous"
    labelPosition="after"
    labelStyle={
      Object {
        "padding": "0 12px",
      }
    }
    onClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={true}
    secondary={false}
    style={
      Object {
        "minWidth": "none",
      }
    }
  >
    <EnhancedButton
      containerElement="button"
      disableTouchRipple={false}
      disabled={true}
      focusRippleColor="#999999"
      focusRippleOpacity={0.3}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "borderRadius": 2,
          "color": "rgba(0, 0, 0, 0.3)",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "minWidth": "none",
          "overflow": "hidden",
          "padding": 0,
          "textAlign": "center",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
      tabIndex={0}
      touchRippleColor="#999999"
      touchRippleOpacity={0.3}
      type="button"
    >
      <button
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.3)",
            "cursor": "default",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": 0,
            "minWidth": "none",
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={-1}
        type="button"
      >
        <NavigationArrowBack
          color="rgba(0, 0, 0, 0.3)"
          key="iconCloned"
          style={
            Object {
              "marginLeft": 0,
              "marginRight": 0,
              "padding": "0 12px",
              "verticalAlign": "middle",
            }
          }
        >
          <SvgIcon
            color="rgba(0, 0, 0, 0.3)"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "marginLeft": 0,
                "marginRight": 0,
                "padding": "0 12px",
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 24 24"
          >
            <svg
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "color": "rgba(0, 0, 0, 0.87)",
                  "display": "inline-block",
                  "fill": "rgba(0, 0, 0, 0.3)",
                  "height": 24,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "muiPrepared": true,
                  "padding": "0 12px",
                  "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                  "userSelect": "none",
                  "verticalAlign": "middle",
                  "width": 24,
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </SvgIcon>
        </NavigationArrowBack>
      </button>
    </EnhancedButton>
  </FlatButton>
  <FlatButton
    disableTouchRipple={true}
    disabled={false}
    fullWidth={false}
    key="1"
    label="1"
    labelPosition="after"
    labelStyle={
      Object {
        "padding": "0 12px",
      }
    }
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={false}
    secondary={true}
    style={
      Object {
        "minWidth": "none",
      }
    }
  >
    <EnhancedButton
      containerElement="button"
      disableTouchRipple={true}
      disabled={false}
      focusRippleColor="#999999"
      focusRippleOpacity={0.3}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "borderRadius": 2,
          "color": "#ff4081",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "minWidth": "none",
          "overflow": "hidden",
          "padding": 0,
          "textAlign": "center",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
      tabIndex={0}
      touchRippleColor="#999999"
      touchRippleOpacity={0.3}
      type="button"
    >
      <button
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "#ff4081",
            "cursor": "pointer",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": 0,
            "minWidth": "none",
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={0}
        type="button"
      >
        <FlatButtonLabel
          key="labelElement"
          label="1"
          style={
            Object {
              "fontSize": 14,
              "fontWeight": 500,
              "letterSpacing": 0,
              "padding": "0 12px",
              "textTransform": "uppercase",
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "muiPrepared": true,
                "padding": "0 12px",
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "verticalAlign": "middle",
              }
            }
          >
            1
          </span>
        </FlatButtonLabel>
      </button>
    </EnhancedButton>
  </FlatButton>
  <FlatButton
    disableTouchRipple={false}
    disabled={true}
    fullWidth={false}
    key="next"
    label=">"
    labelPosition="after"
    labelStyle={
      Object {
        "padding": "0 12px",
      }
    }
    onClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={true}
    secondary={false}
    style={
      Object {
        "minWidth": "none",
      }
    }
  >
    <EnhancedButton
      containerElement="button"
      disableTouchRipple={false}
      disabled={true}
      focusRippleColor="#999999"
      focusRippleOpacity={0.3}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "borderRadius": 2,
          "color": "rgba(0, 0, 0, 0.3)",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "minWidth": "none",
          "overflow": "hidden",
          "padding": 0,
          "textAlign": "center",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
      tabIndex={0}
      touchRippleColor="#999999"
      touchRippleOpacity={0.3}
      type="button"
    >
      <button
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.3)",
            "cursor": "default",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": 0,
            "minWidth": "none",
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={-1}
        type="button"
      >
        <FlatButtonLabel
          key="labelElement"
          label=">"
          style={
            Object {
              "fontSize": 14,
              "fontWeight": 500,
              "letterSpacing": 0,
              "padding": "0 12px",
              "textTransform": "uppercase",
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "muiPrepared": true,
                "padding": "0 12px",
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "verticalAlign": "middle",
              }
            }
          >
            &gt;
          </span>
        </FlatButtonLabel>
      </button>
    </EnhancedButton>
  </FlatButton>
</div>
`;
